@@ -1256,13 +1256,38 @@ chart
 
     .. code:: text
 
-        {{% raw %}}{{% chart Bar title='Browser usage evolution (in %)' %}}
-        x_labels='["2002","2003","2004","2005","2006","2007","2008","2009","2010","2011","2012"]'%}}
+        {{% raw %}}{{% chart Bar title='Browser usage evolution (in %)'
+x_labels='["2002","2003","2004","2005","2006","2007"]' %}}
         'Firefox', [None, None, 0, 16.6, 25, 31]
         'Chrome',  [None, None, None, None, None, None]
         'IE',      [85.8, 84.6, 84.7, 74.5, 66, 58.6]
         'Others',  [14.2, 15.4, 15.3, 8.9, 9, 10.4]
         {{% /chart %}}{{% /raw %}}
+
+    Additionally, you can use a file_data argument which can point to a JSON or YAML file, and will be used for both arguments and data.
+    Example:
+
+    .. code:: json
+
+        {
+            "x_labels": ["2002","2003","2004","2005","2006","2007"],
+            "data": {
+                "Firefox": [null, null, 0, 16.6, 25, 31],
+                "Chrome": [null, null, null, null, null, null],
+                "IE": [85.8, 84.6, 84.7, 74.5, 66, 58.6],
+                "Others": [14.2, 15.4, 15.3, 8.9, 9, 10.4]
+            }
+        }
+
+    Which can be used like this:
+
+    .. code:: text
+
+        {{% raw %}}{{% chart Bar title='Browser usage evolution (in %)' data_file="posts/browsers.json" %}}
+        {{% /chart %}}
+        {{% /raw %}}
+
+    If the data or any option is available in both the ``data_file`` and the document, the document has priority.
 
 doc
     Will link to a document in the page, see `Doc role for details
@@ -2662,6 +2687,8 @@ You can use any option described in `the pygal docs <http://pygal.org/en/stable/
 
 Finally, the content of the directive is the actual data, in the form of a label and
 a list of values, one series per line.
+
+You can also specify a ``:data_file:`` option as described in the documentation for the chart shortcut.
 
 Doc
 ~~~
