@@ -33,7 +33,7 @@ except ImportError:
     pygal = None  # NOQA
 
 from nikola.plugin_categories import ShortcodePlugin
-from nikola.utils import req_missing
+from nikola.utils import req_missing, load_data
 
 _site = None
 
@@ -50,18 +50,30 @@ class ChartShortcode(ShortcodePlugin):
                 ['pygal'], 'use the Chart directive', optional=True)
             return '<div class="text-error">{0}</div>'.format(msg)
         options = {}
-        data = _options.pop('data')
+        chart_data = []
         _options.pop('post', None)
         _options.pop('site')
-        if 'style' in _options:
-            style_name = _options.pop('style')
-        else:
-            style_name = 'BlueStyle'
+        data = _options.pop('data')
+
+        for line in data.splitlines():
+            line = line.strip()
+            if line:
+                chart_data.append(literal_eval('({0})'.format(line)))
+        if 'data_file' in _options:
+            options = load_data(_options['data_file'])
+            _options.pop('data_file')
+            if not chart_data:  # If there is data in the document, it wins
+                for k, v in options.pop('data', {}).items():
+                    chart_data.append((k, v))
+
+        options.update(_options)
+
+        style_name = options.pop('style', 'BlueStyle')
         if '(' in style_name:  # Parametric style
             style = eval('pygal.style.' + style_name)
         else:
             style = getattr(pygal.style, style_name)
-        for k, v in _options.items():
+        for k, v in options.items():
             try:
                 options[k] = literal_eval(v)
             except Exception:
@@ -73,9 +85,6 @@ class ChartShortcode(ShortcodePlugin):
         if _site and _site.invariant:
             chart.no_prefix = True
         chart.config(**options)
-        for line in data.splitlines():
-            line = line.strip()
-            if line:
-                label, series = literal_eval('({0})'.format(line))
-                chart.add(label, series)
+        for label, series in chart_data:
+            chart.add(label, series)
         return chart.render().decode('utf8')
